# socra-code

./: .gitignore  README.md  pyproject.toml
backend/: .env  .env.example  config.py  deps.py  main.py  requirements.txt  schemas.py
backend/api/: game.py  practice.py  problems.py  ws.py
backend/benchmarks/: README.md  benchmark_cli.py  datasets.py  embeddings.py  metrics.py  runner.py  tasks.py
backend/core/: generator.py  graph_constructor.py  knowledge_tracer.py  misconception_graph.py  pipeline.py  planner.py  question_generator.py  rag.py  reasoner.py  response_evaluator.py  socratic_pipeline.py  student_model.py  traversal_engine.py  utils.py  verifier.py
backend/execution/: docker_runner.py  runner.py
backend/models/: base.py  claude.py  factory.py  groq.py  huggingface.py  mock.py  openai_provider.py  openrouter.py  router.py
backend/problems/: ingest.py  registry.py  schema.py
backend/rag/: chunking.py  embeddings.py  index.py  ingest.py  schema.py
backend/store/: base.py  (+2 more)
frontend/: frontend1.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
planningDocs/: 01 from TreeInstruct to SocraticSprint.md  02 available literature and resources.md  02.txt  03 whats possible with an slm.md  03.txt  04 planning.md  04.txt
tests/: test_claude_provider.py  test_deps.py  test_graph_constructor.py  test_hint_pipeline.py  test_misconception_graph.py  test_practice_api.py  test_prompt_builders.py  test_question_generator.py  test_response_evaluator.py  test_socratic_pipeline.py  test_student_model.py  test_traversal_engine.py  test_utils.py
(+328 files in other folders)
