[project]
name = "socratic-sprint"
version = "0.1.0"
description = "Socratic Sprint full-stack tutoring system"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Socratic Sprint" }]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "pydantic>=2.6.1",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.1",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=2.7.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
]

[tool.uv]
package = false
